--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -4,7 +4,7 @@
         <a href="{{BaseURL}}" class="navbar-brand">Minetest hosting</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-                <a href="{{BaseURL}}login" class="nav-link">
+                <a href="{{BaseURL}}/login" class="nav-link">
                     <i class="fa fa-sign-in"></i> Login
                 </a>
             </li>
@@ -12,7 +12,7 @@
         {{if Claims}}
         <form class="d-flex">
             <div class="btn btn-light">
-                <a href="{{BaseURL}}profile">
+                <a href="{{BaseURL}}/profile">
                     <i class="fas fa-user"></i>
                     <span>
                         Logged in as <b>{{Claims.Username}}</b>
