--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -15,7 +15,7 @@
                 <a href="{{BaseURL}}/profile">
                     <i class="fas fa-user"></i>
                     <span>
-                        Logged in as <b>{{Claims.Username}}</b>
+                        Logged in as <b>{{Claims.Mail}}</b>
                     </span>
                 </a>
             </div>
