rename node -> node_type / instance -> server

--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -11,8 +11,8 @@
             {{if Claims}}
                 {{if eq Claims.Role "ADMIN"}}
                 <li class="nav-item">
-                    <a href="{{BaseURL}}/nodes" class="nav-link">
-                        <i class="fa fa-server"></i> Nodes
+                    <a href="{{BaseURL}}/node_types" class="nav-link">
+                        <i class="fa fa-server"></i> Node-Types
                     </a>
                 </li>
                 {{end}}
