--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -16,6 +16,11 @@
                     </a>
                 </li>
                 {{end}}
+            <li class="nav-item">
+                <a href="{{BaseURL}}/nodes" class="nav-link">
+                    <i class="fa fa-server"></i> Nodes
+                </a>
+            </li>
             {{end}}
         </ul>
         {{if Claims}}
