--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -14,7 +14,18 @@
         {{block "navbar" .}}{{end}}
         <div class="container-fluid">
             <br>
-            {{block "content" .}}{{end}}
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            {{block "title" .}}{{end}}
+                        </div>
+                        <div class="card-body">
+                            {{block "content" .}}{{end}}
+                        </div>
+                    </div>
+                </div>
         </div>
     </body>
 </html>
