--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -14,6 +14,7 @@
         {{block "navbar" .}}{{end}}
         <div class="container-fluid">
             <br>
+            {{block "top-content" .}}{{end}}
             <div class="row">
                 <div class="col-md-3"></div>
                 <div class="col-md-6">
