--- a/web/components/breadcrumb.html
+++ b/web/components/breadcrumb.html
@@ -1,6 +1,6 @@
 {{define "breadcrumb"}}
 <nav>
-    <ol class="breadcrumb">
+    <ol class="breadcrumb bg-primary-subtle">
         {{ range $e := .Entries }}
         <li class="breadcrumb-item {{if $e.Active}}active{{end}}">
             <a href="{{$e.Link}}">{{$e.Name}}</a>
