--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -15,6 +15,11 @@
                         <i class="fa fa-server"></i> Node-Types
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{BaseURL}}/jobs" class="nav-link">
+                        <i class="fa fa-play"></i> Jobs
+                    </a>
+                </li>
                 {{end}}
             <li class="nav-item">
                 <a href="{{BaseURL}}/nodes" class="nav-link">
