--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -26,6 +26,11 @@
                     <i class="fa fa-server"></i> Nodes
                 </a>
             </li>
+            <li class="nav-item">
+                <a href="{{BaseURL}}/mtserver" class="nav-link">
+                    <i class="fa fa-list"></i> Servers
+                </a>
+            </li>
             {{end}}
         </ul>
         {{if ne Config.Stage "prod"}}
