--- a/web/components/navbar.html
+++ b/web/components/navbar.html
@@ -1,7 +1,7 @@
 {{define "navbar"}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <img src="{{BaseURL}}/assets/minetest-hosting.png" width="32" height="32"/>
+        <img src="{{BaseURL}}/assets/minetest-hosting-80px.png"/>
         &nbsp;
         <a href="{{BaseURL}}" class="navbar-brand">Minetest hosting</a>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
