--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -2,12 +2,7 @@
 <!DOCTYPE html>
 <html style="height: 100%">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="theme-color" content="#000">
-        <link rel="icon" href="{{BaseURL}}/assets/minetest-hosting-80px.png" type="image/png">
-        <link rel="stylesheet" href="{{BaseURL}}/assets/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="{{BaseURL}}/assets/css/fontawesome.min.css"/>
+        {{ block "header_common" .}}{{end}}
         {{ block "header" . }}{{end}}
         <title>{{block "title" .}}{{end}} - Minetest hosting</title>
     </head>
