--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -16,6 +16,7 @@
                 <div class="col-md-8">
                     <div class="card">
                         <div class="card-header">
+                            {{block "title-icon" .}}{{end}}
                             {{block "title" .}}{{end}}
                         </div>
                         <div class="card-body">
