--- a/web/components/breadcrumb.html
+++ b/web/components/breadcrumb.html
@@ -2,8 +2,13 @@
 <nav>
     <ol class="breadcrumb bg-primary-subtle">
         {{ range $e := .Entries }}
-        <li class="breadcrumb-item {{if $e.Active}}active{{end}}">
-            <a href="{{BaseURL}}{{$e.Link}}">{{$e.Name}}</a>
+        <li class="breadcrumb-item">
+            <a href="{{BaseURL}}{{$e.Link}}">
+                {{if $e.FAIcon}}
+                    <i class="fa fa-{{$e.FAIcon}}"></i>
+                {{end}}
+                {{$e.Name}}
+            </a>
         </li>
         {{end}}
     </ol>
