--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -24,6 +24,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </div>
     </body>
 </html>
