refresh if busy

--- a/web/components/layout.html
+++ b/web/components/layout.html
@@ -3,6 +3,7 @@
 <html style="height: 100%">
     <head>
         {{ block "header_common" .}}{{end}}
+        {{ block "header_custom" . }}{{end}}
         {{ block "header" . }}{{end}}
         <title>{{block "title" .}}{{end}} - Minetest hosting</title>
     </head>
